fix typo and add directions heading

--- a/recipes/fried-rice.html
+++ b/recipes/fried-rice.html
@@ -11,12 +11,12 @@
     <p>Easy to make Japanese fried rice with  592 calories; protein 12g; carbohydrates 79.8g; fat 24.5g; cholesterol 126.6mg; sodium 1225.7mg per serving.
     </p>
     <ul>
-        <li><strong>Prep:</strong>5 mins</li>
-        <li><strong>Cook:</strong>30 mins</li>
-        <li><strong>Additional:</strong>30 mins</li>
-        <li><strong>Total:</strong>1 hr 5 mins</li>
-        <li><strong>Servings:</strong>4</li>
-        <li><strong>Yield:</strong>8 servings</li>
+        <li><strong>Prep:</strong> 5 mins</li>
+        <li><strong>Cook:</strong> 30 mins</li>
+        <li><strong>Additional:</strong> 30 mins</li>
+        <li><strong>Total:</strong> 1 hr 5 mins</li>
+        <li><strong>Servings:</strong> 4</li>
+        <li><strong>Yield:</strong> 8 servings</li>
     </ul>
     <h2>Ingredients</h2>
     <ul>
@@ -31,7 +31,7 @@
         <li>⅛ teaspoon salt</li>
         <li>⅛ teaspoon ground black pepper</li>
     </ul>
-
+    <h2>Directions</h2>
     <ol>
         <li>Place rice, chicken stock, and water in a medium saucepan; bring to a boil. Reduce heat to low, cover, and simmer until tender and liquid has been absorbed, 15 to 20 minutes.</li>
         <li>Remove from the heat, stir in 2 tablespoons butter, and let cool to room temperature, about 30 minutes.</li>
