--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -11,11 +11,11 @@
     <p>A great alternative to your regular pizza.</p>
     <p>Nutrition facts per serving: 94 calories; protein 17.3g; carbohydrates 39.3g; fat 19.9g; cholesterol 35.6mg; sodium 936.8mg.</p>
     <ul>
-        <li><strong>Prep:</strong>10 mins</li>
-        <li><strong>Cook:</strong>10 mins</li>
-        <li><strong>Total:</strong>20 mins</li>
-        <li><strong>Servings:</strong>6</li>
-        <li><strong>Yield:</strong>6 servings</li>
+        <li><strong>Prep:</strong> 10 mins</li>
+        <li><strong>Cook:</strong> 10 mins</li>
+        <li><strong>Total:</strong> 20 mins</li>
+        <li><strong>Servings:</strong> 6</li>
+        <li><strong>Yield:</strong> 6 servings</li>
     </ul>
     <h2>Ingredients</h2>
     <ul>
@@ -28,7 +28,7 @@
         <li>1 (4 ounce) can artichoke hearts, drained and sliced</li>
         <li>1 cup crumbled feta cheese</li>
     </ul>
-
+    <h2>Directions</h2>
     <ol>
         <li>Preheat oven to 450 degrees F (230 degrees C).</li>
         <li>Spread pesto on pizza crust. Top with tomatoes, bell peppers, olives, red onions, artichoke hearts and feta cheese.</li>
