--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -11,10 +11,10 @@
     <p>Spaghetti like never before invented. Enjoy!</p>
     <p>Nutrition facts per serving: 680 calories; protein 39.4g; carbohydrates 76.9g; fat 23.6g; cholesterol 91.5mg; sodium 876.1mg.</p>
     <ul>
-        <li><strong>Cook:</strong>25 mins</li>
-        <li><strong>Total:</strong>25 mins</li>
-        <li><strong>Servings:</strong>6</li>
-        <li><strong>Yield:</strong>6 servings</li>
+        <li><strong>Cook:</strong> 25 mins</li>
+        <li><strong>Total:</strong> 25 mins</li>
+        <li><strong>Servings:</strong> 6</li>
+        <li><strong>Yield:</strong> 6 servings</li>
     </ul>
     <h2>Ingredients</h2>
     <ul>
@@ -25,7 +25,7 @@
         <li>2 (10.75 ounce) cans condensed tomato soup.</li>
         <li>2½ cups water</li>
     </ul>
-
+    <h2>Directions</h2>
     <ol>
         <li>Bring a large pot of lightly salted water to a boil. Add pasta and cook for 8 to 10 minutes or until al dente; drain.</li>
         <li>In a large skillet over medium heat, cook ground beef with onion until meat is brown. Drain. Return meat mixture to pan with tomato paste, tomato soup and water. Cook, stirring, until heated through and thickened, 5 to 15 minutes. Serve over cooked pasta.</li>
