--- a/recipes/fried-rice.html
+++ b/recipes/fried-rice.html
@@ -40,5 +40,7 @@
         <li>Melt remaining 2 tablespoons butter in a large frying pan over medium-high heat. Dump rice mixture into the hot pan. Add sesame seeds, 2 tablespoons soy sauce, salt, and pepper. Cook, stirring often, for 8 minutes.</li>
         <li>Taste and add more butter or soy sauce as desired. Serve.</li>
     </ol>
+
+    <a href="../index.html">Back to menu</a>
 </body>
 </html>
